--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^5.0.0
-
+  table_calendar: ^3.1.2
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
