--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   carousel_slider: ^5.0.0
   table_calendar: ^3.1.2
   cupertino_icons: ^1.0.8
+  image_picker: ^0.8.4+4
+  image_picker_for_web: ^2.1.7
 
 dev_dependencies:
   flutter_test:
