--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^0.8.4+4
   image_picker_for_web: ^2.1.7
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
