--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
   carousel_slider: ^5.0.0
   table_calendar: ^3.1.2
   cupertino_icons: ^1.0.8
-  image_picker: ^0.8.4+4
-  image_picker_for_web: ^2.1.7
+  image_picker: ^1.1.2
+  image_picker_for_web: ^3.0.6
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
+  firebase_auth: ^5.3.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
