--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_storage: ^12.3.6
   firebase_auth: ^5.3.3
   cached_network_image: ^3.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
